@@ -1,7 +1,8 @@
 intended v0.1.22
 + implement ui/Component#_off
 + implement ui/Component#_makeDraggable - publishes 'drag' and 'drop' events, both with a data object describing the drag
-+ rename delay to throttle
++ implement throttle
++ change implementation of delay to actually delay, rather than throttle
 
 v0.1.21
 + start implementing std/time
